spacing added across body, roboto mono fixed

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@
      font-family: 'Roboto Mono', sans-serif;
      line-height: 1;
      font-weight: 700;
+     letter-spacing: .7px;
    }
    
    .body.other-pages {
